add_definitions(-D_HARP_PLUGIN=1)
include_directories(${CMAKE_SOURCE_DIR})
add_library(harpplugin SHARED plugin.c ../message.c ../sndutil.c ../${SOUND_SRC})

option (WITH_MP3 "Enable MP3 support" ON)
option (WITH_AAC "Enable AAC support" ON)
option (WITH_VORBIS "Enable Vorbis support" ON)
option (WITH_FLAC "Enable FLAC support" ON)
option (WITH_STREAM "Enable stream support" ON)

if (WITH_MP3)
	add_subdirectory(mp3)
endif(WITH_MP3)
if (WITH_AAC)
	add_subdirectory(aac)
endif(WITH_AAC)
if (WITH_VORBIS)
	add_subdirectory(vorbis)
endif(WITH_VORBIS)
if (WITH_FLAC)
	add_subdirectory(flac)
endif(WITH_FLAC)
if (WITH_STREAM)
	add_subdirectory(stream)
endif(WITH_STREAM)

INSTALL(TARGETS harpplugin LIBRARY DESTINATION lib)
