add_definitions(-D_HARP_PLUGIN=1)
include_directories(${CMAKE_SOURCE_DIR})

#SET(CMAKE_C_FLAGS "-fPIC -g -O0")

add_library(harpplugin STATIC plugin.c ../message.c ../sndutil.c ../${SOUND_SRC})
SET_TARGET_PROPERTIES(harpplugin PROPERTIES POSITION_INDEPENDENT_CODE True)

option (WITH_MP3 "Enable MP3 support" ON)
option (WITH_AAC "Enable AAC support" ON)
option (WITH_VORBIS "Enable Vorbis support" ON)
option (WITH_FLAC "Enable FLAC support" ON)
option (WITH_STREAM "Enable stream support" ON)

if (WITH_MP3)
	add_definitions(-DWITH_MP3=1)
	add_subdirectory(mp3)
	set(PLUGIN_LINK ${PLUGIN_LINK} harpmp3)
endif(WITH_MP3)
if (WITH_AAC)
	add_definitions(-DWITH_AAC=1)
	add_subdirectory(aac)
	set(PLUGIN_LINK ${PLUGIN_LINK} harpaac)
endif(WITH_AAC)
if (WITH_VORBIS)
	add_definitions(-DWITH_VORBIS=1)
	add_subdirectory(vorbis)
	set(PLUGIN_LINK ${PLUGIN_LINK} harpvorbis)
endif(WITH_VORBIS)
if (WITH_FLAC)
	add_definitions(-DWITH_FLAC=1)
	add_subdirectory(flac)
	set(PLUGIN_LINK ${PLUGIN_LINK} harpflac)
endif(WITH_FLAC)
if (WITH_STREAM)
	add_definitions(-DWITH_STREAM=1)
	add_subdirectory(stream)
	set(PLUGIN_LINK ${PLUGIN_LINK} harpstream)
endif(WITH_STREAM)

target_link_libraries (harpplugin ${PLUGIN_LINK})
#INSTALL(TARGETS harpplugin LIBRARY DESTINATION lib)
