add_definitions(-D_HARP_PLUGIN=1)
find_package(MPG123 REQUIRED)
include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/plugins ${MPG123_INCLUDE_DIR})
link_directories(${CMAKE_SOURCE_DIR}/plugins)
add_library(libharpmp3 SHARED mp3.c ../../defs_h.c)
target_link_libraries (libharpmp3 libharpplugin ${MPG123_LIBRARY})
